[package]
name = "cryptonote-basic"
version = "0.1.0"
authors = ["calidion <calidion@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "base58 for cryptonote"

[dependencies]
[badges]
travis-ci = { repository = "cryptonote-rust/basic", branch = "master" }
codecov = { repository = "cryptonote-rust/basic", branch = "master", service = "github" }
